force-app/main/default/objects/Rule_Assignment__c/Rule_Assignment__c.object-meta.xml
<CustomObject>
    <label>Rule Assignment</label>
    <nameField>
        <label>Rule Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>