force-app/main/default/objects/Rule_Assignment__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>