force-app/main/default/objects/Rule_Assignment__c/fields/Is_Family_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Is_Family_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Family Assignment</label>
    <type>Checkbox</type>
</CustomField>