force-app/main/default/objects/Rule_Assignment__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>