force-app/main/default/objects/Rule_Assignment__c/fields/RevRecRule__c.field-meta.xml
<CustomField>
    <fullName>RevRecRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecRule</label>
    <referenceTo>RevRecRules__c</referenceTo>
    <relationshipLabel>Rule Assignments</relationshipLabel>
    <relationshipName>Rule_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>