force-app/main/default/objects/Rule_Assignment__c/fields/Selected_Familys__c.field-meta.xml
<CustomField>
    <fullName>Selected_Familys__c</fullName>
    <label>Selected Familys</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>