force-app/main/default/objects/Rule_Assignment__c/fields/Selected_Product_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Product_Ids__c</fullName>
    <label>Selected Product Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>